# pybudgea

./: .gitignore  .travis.yml  Makefile  Pipfile  README.md  diff_openapi.json  gen_patch.py  merge_in.yaml  merge_in_0.yaml  merge_in_yaml.py  patch_autogen.py  patch_diff_yaml.py  patch_json.py  patch_yaml.py  pyproject.toml  scratch.rst  swagger.json  swagger.yaml  tox.ini  utils.py
.github/workflows/: python-package.yml  python-publish.yml
generator/: Dockerfile  pom.xml
generator/customcodegen/: pom.xml
generator/customcodegen/src/main/java/eu/rienafairefr/customcodegen/: CustomCodegenGenerator.java
generator/customcodegen/src/main/resources/customcodegen/: __init__model.mustache  model.mustache
generator/customcodegen/src/test/java/eu/rienafairefr/customcodegen/: CustomCodegenGeneratorTest.java
generator/src/main/java/eu/rienafairefr/customcodegen/: CustomCodegen.java  EntryPoint.java  PythonCustomCodegen.java
generator/src/main/resources/customcodegen/: __init__schema.mustache  partial_type.mustache  partial_type_parameters.mustache  schema.mustache  schema_fields.mustache
generator/src/test/java/eu/rienafairefr/customcodegen/: CustomCodegenTest.java
scripts/: balance.py  config_endpoint_tests.py  endpoints_tests.py  incoming_push.py  transactionclusters.py  utils.py
templates/: model.mustache  schema_fields.mustache  setup.mustache
