[tool.poetry]
name = "python budgea"
version = "0.1.0"
description = ""
authors = ["Matthieu Berthomé <matthieu@mmea.fr>"]

[tool.poetry.dev-dependencies]
certifi = ">=14.05.14"
python-dateutil = ">=2.5.3"
urllib3 = ">=1.15.1"
readme-renderer = {extras = ["md"],version = "*"}
pyyaml = "*"
coverage = ">=4.0.3"
nose = ">=1.3.7"
pluggy = ">=0.3.1"
py = ">=1.4.31"
randomize = ">=0.13"
python-dotenv = "*"
pytest = "*"
twine = "*"
coveralls = "*"
pytest-cov = "*"
setuptools_scm = "*"
inflection = "*"
jsondiff = "*"
jsonpatch = "*"
tabulate = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
